# DesignPatterns

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: behavioral_patterns.cpp  creational_patterns.cpp  structural_patterns.cpp
